# beeai-framework

./: .gitignore  MAINTAINERS.md  README.md  main.py  mise.toml  test.py  test.ts
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.githooks/: hook.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-pages.yml  docs.yml  docs_old.yml  py_e2e_tests.yml  py_main.yml  ts_e2e_tests.yml  ts_examples_tests.yml  ts_main.yml
docs/: MIGRATION.md  astro.config.mjs  docs.json  mise.toml  package-lock.json  package.json  redirects.mjs  tasks.toml
docs-mintlify/: docs.json  package.json
docs-mintlify/experimental/: requirement-agent.mdx
docs-mintlify/guides/: acp.mdx  beeai-platform-integration.mdx  integrations.mdx
docs-mintlify/integrations/: acp.mdx
docs-mintlify/introduction/: quickstart.mdx
docs-mintlify/modules/: agents.mdx  tools.mdx
docs-mintlify/python/: integrations.mdx  tutorials.mdx
docs-mintlify/typescript/: examples.mdx  migration_guide.mdx
docs-old/: docs.json  tasks.toml
docs-old/guides/: mcp-slackbot.mdx
docs-old/integrations/: acp-zed.mdx  openai-api.mdx  watsonx-orchestrate.mdx
python/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.toml
python/cz_commitizen/: __init__.py  monorepo_commits.py  pyproject.toml
typescript/: .env.template  .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tasks.toml  tsconfig.json
website/: MIGRATION.md  astro.config.mjs  mise.toml  package-lock.json
(+1308 files in other folders)
