[project]
name = "cz-commitizen"
version = "0.0.0"
description = "Internal Commitizen plugin for the beeai-framework monorepo. Not published."
requires-python = ">=3.11,<3.14"
dependencies = ["commitizen>=4.2.1"]

[project.entry-points."commitizen.plugin"]
cz_monorepo_commits = "cz_commitizen:MonorepoCommitsCz"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
